cluster/config/longhorn/longhorn-mtls.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "mtls"
  namespace: longhorn-system
spec:
  mtls:
    mode: STRICT
