cluster/config/longhorn/longhorn-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
