cluster/config/longhorn/longhorn-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  hosts:
  - "longhorn.kube.home"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: longhorn-frontend
        port:
          number: 80
