cluster/config/longhorn/longhorn-authpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: longhorn-authentik-policy
  namespace: longhorn-system
spec:
  selector:
    matchLabels:
      istio: gateway 
  action: CUSTOM
  provider:
    name: "authentik"
  rules:
  - to:
    - operation:
        hosts:
          - "longhorn.kube.home"
